<resources>
    <string name="app_name">OpenBot</string>
    <string name="activity_name">OpenBot</string>
    <string name="description_info">Info</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="threads">Threads</string>
    <string name="camera_permission_denied">Camera permission is necessary</string>
    <string name="storage_permission_denied">External storage permission is necessary</string>
    <string name="location_permission_denied">Location permission is necessary</string>
    <string name="record_audio_permission_denied">Recording audio permission is necessary</string>
    <string name="permission_reason_logging"> to log datasets.</string>
    <string name="permission_reason_ai"> to run AI models.</string>
    <string name="permission_reason_ar_core"> to run AR Core.</string>
    <string name="permission_reason_stream_video"> to stream video to the controller.</string>
    <string name="permission_reason_preview"> to preview video.</string>
    <string name="permission_reason_stream_audio"> to stream audio to the controller.</string>
    <string name="permission_reason_find_controller"> to find the controller.</string>
    <string name="permission_reason_model_from_phone"> to select a model from phone storage.</string>
    <string name="permission_reason_settings"> to use all features of the app.</string>
    <string name="control_mode_gamepad">Gamepad</string>
    <string name="control_mode_phone">Phone</string>
    <string name="control_mode_webserver">Webserver</string>
    <string name="control_mode_unknown">Unknown</string>
    <string name="control_mode_manette">Manette</string>
    <string name="drive_mode_gamepad">Gamepad</string>
    <string name="drive_mode_joystick">Joystick</string>
    <string name="drive_mode_dual">Dual</string>
    <string name="all">All</string>
    <string name="general">General</string>
    <string name="legacy">Legacy</string>
    <string name="controller_mapping">Controller Mapping</string>
    <string name="robot_info">Robot Info</string>
    <string name="game">Game</string>
    <string name="free_roam">Free Roam</string>
    <string name="ar_mode">AR Mode</string>
    <string name="default_t">Default</string>
    <string name="data_collection">Data Collection</string>
    <string name="local_save_on_phone">Local (save On Phone)</string>
    <string name="edge_local_network">Edge (local Network)</string>
    <string name="cloud_firebase">Cloud (firebase)</string>
    <string name="crowd_source">Crowd-source (post/accept Data Collection Tasks)</string>
    <string name="ai">AI</string>
    <string name="autopilot">Autopilot</string>
    <string name="person_following">Person Following</string>
    <string name="object_nav">Object Tracking</string>
    <string name="model_management">Model Management</string>
    <string name="point_goal_navigation">Point Goal Navigation</string>
    <string name="autonomous_driving">Autonomous Driving</string>
    <string name="visual_goals">Visual Goals</string>
    <string name="smart_voice">Smart Voice (left/right/straight, Ar Core)</string>
    <string name="remote_access">Remote Access</string>
    <string name="web_interface">Web Interface</string>
    <string name="ros">ROS</string>
    <string name="fleet_management">Fleet Management</string>
    <string name="sensor_data"> Sensor Data</string>
    <string name="log_data"> Log Data</string>
    <string name="model_resolution">Model Resolution</string>
    <string name="preview_images"> Preview Images</string>
    <string name="training_images"> Training Images</string>
    <string name="delay"> Delay (ms)</string>
    <string name="coding">Coding</string>
    <string name="block_based_programming">Block-Based Programming</string>
    <string name="scripts">Scripts</string>
    <string name="research">Research</string>
    <string name="classical_robotics_algorithms">Classical Robotics Algorithms</string>
    <string name="backend_for_learning">Backend For Learning</string>
    <string name="monitoring">Monitoring</string>
    <string name="sensors_from_car">Sensors from Car</string>
    <string name="sensors_from_phone">Sensors from Phone</string>
    <string name="map_view">Map View</string>
    <string name="video_protocol">VIDEO_PROTOCOL</string>
    <string name="video_command">VIDEO_COMMAND</string>
    <string name="video_server_url">VIDEO_SERVER_URL</string>
    <string name="webrtc_event">WEB_RTC_EVENT</string>
    <string name="switch_camera">SWITCH_CAMERA</string>
    <string name="set_goal_title">Set Goal</string>
    <string name="set_goal_message">Mount the phone on the robot and specify a goal. The robot will try to reach the goal after pressing start.</string>
    <string name="start_button">Start</string>
    <string name="storage">Storage</string>
    <string name="location">Location</string>
    <string name="microphone">Microphone</string>
    <string name="video_streaming">Video Streaming</string>
    <string name="stream_mode">Stream Mode</string>
    <string-array name="connection_type">
        <item>Bluetooth</item>
        <item>USB</item>
    </string-array>
    <string name="connectivity_mode">Connectivity Mode</string>
    <string name="language">Language</string>
    <string name="select_language">Select Language</string>
    <string name="default_stream_mode">RTSP</string>
    <string name="default_connectivity_mode">USB</string>
    <string name="default_language">en</string>
    <string name="google_account"> Set up your profile by signing in with your Google account.</string>
    <string name="sign_in" > Sign-in with Google</string>
    <string name="edit_profile"> Edit Profile</string>
    <string name="logout_one"> Logout</string>
    <string name="no_projects"> Oops! No projects found.</string>
    <string name="no_projects_google">Looks like there are no projects in your google drive yet.</string>
    <string name="set_up_google">Set up your profile by signing in with your Google account.</string>
    <string name="sign_in_google">Sign-in with Google</string>
    <string name="blink_led">Blink LED file detected.Start to execute the code on your OpenBot.</string>
    <string name="start_two"> Start</string>
    <string name="first_name"> First Name</string>
    <string name="last_name"> Last Name</string>
    <string name="date_of_birth"> Date Of Birth</string>
    <string name="email_address"> Email Address</string>
    <string name="save_changes"> Save Changes</string>
    <string name="btn_refresh"> Refresh</string>
    <string name="stop_btn_name"> Stop Car</string>
    <string name="reset_btn_name"> Reset</string>
    <string name="qr_error_message"> Oops! Something went wrong.Please try again.</string>
    <string name="qr_bottom_sheet_title_error"> Error</string>
    <string name="sensor_one"> Sensors</string>
    <string name="model_details"> Model Details</string>
    <string name="edit_one"> .tflite</string>
    <string name="name_model"> Name</string>
    <string name="auto_pilot"> Auto Pilot</string>
    <string name="class_model"> Class</string>
    <string name="type_model"> Type</string>
    <string name="input_model"> Input (w x h)</string>
    <string name="done"> Done</string>
    <string name="connect_ble"> Connect</string>
    <string name="model_one"> Model 1</string>
    <string name="accelerometer"> Accelerometer</string>
    <string name="subcategory"> Subcategory</string>
    <string name="category"> Category</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="server">Server</string>
    <string name="save_as">Save As</string>
    <string name="ip_placeholder">x.x.x.x</string>
    <string name="model">Model</string>
    <string name="device">Device</string>
    <string name="baud_rate">Baud Rate</string>
    <string name="log_setting">Log Setting</string>
    <string name="camera_facing_back">Back</string>
    <string name="camera_facing_front">Front</string>
    <string name="logging">Logging</string>
    <string name="not_logging">Not Logging</string>
    <string name="no_device">No Device</string>
    <string name="data_log">Data Log</string>
    <string name="usb_connection">USB Connection</string>
    <string name="camera">Camera</string>
    <string name="control">Control</string>
    <string name="battery">Battery</string>
    <string name="speed">Speed (l,r)</string>
    <string name="sonar">Sonar</string>
    <string name="control_info">***,***</string>
    <string name="rpm">***,*** rpm</string>
    <string name="voltage">**.* V</string>
    <string name="distance">*** cm</string>
    <string name="time_ms">*** ms</string>
    <string name="time_fps">*** fps</string>
    <string name="resolution">*** x ***</string>
    <string name="drive_mode">Drive Mode</string>
    <string name="speed_mode">Speed Mode</string>
    <string name="plus">plus</string>
    <string name="arrow">arrow</string>
    <string name="minus">minus</string>
    <string name="controller">Controller</string>
    <string name="control_mode">Control Mode</string>
    <string name="crop">Crop</string>
    <string name="frame">Frame</string>
    <string name="_1">1</string>
    <string name="settings">Settings</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="inference">Speed</string>
    <string name="input">Input</string>
    <string name="confidence">Confidence</string>
    <string name="object">Object</string>
    <string name="speedTitle">Speed</string>
    <string name="voltageInfo">%1$s V</string>
    <string name="speedInfo">%1$s rpm</string>
    <string name="distanceInfo">%1$s cm</string>
    <string name="preview_resolution">Preview Resolution</string>
    <string name="save_option">Save Options</string>
    <string name="file_available_body">A model with the same name already exists. Would you like to replace it?</string>
    <string name="file_available_title">File found</string>
    <string name="model_delete_body">Are you sure you want to delete this model?</string>
    <string name="model_delete_title">Confirm</string>
    <string name="permissions">Permissions</string>
    <string name="goal_reached">Goal reached.</string>
    <string name="model_download_body">Going back would cancel the download. Are you sure?</string>
    <string name="model_download_title">Model Download In Progress</string>
    <string name="save">Save</string>
    <string name="confirm_title">Are you sure?</string>
    <string name="stream_change_body">The app needs to be restarted for this setting to take effect</string>
    <string name="selectAll">Select All</string>
    <string name="clearAll">Clear All</string>
    <string name="tracking_lost">Tracking lost.</string>
    <string name="no_initial_ar_core_pose">No initial AR Core pose.</string>
    <string name="ar_core_session_paused">AR Core session paused.</string>
    <string name="tips_connect_timeout">connect timeout</string>
    <string name="tips_connect_fail">connect fail</string>
    <string name="tips_connection_disconnected">connection has disconnected</string>
    <string name="tips_write_operation">please enter a hex string</string>
    <string-array name="servers">
        <item>No server</item>
    </string-array>
    <string-array name="models">
        <item>Autopilot_F</item>
        <item>MobileNetV1_1_0_Q</item>
        <item>MobileNetV3_S_Q</item>
        <item>YoloV4</item>
    </string-array>
    <string-array name="devices">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>
    <string-array name="baud_rates">
        <item>9600</item>
        <item>14400</item>
        <item>19200</item>
        <item>38400</item>
        <item>57600</item>
        <item>115200</item>
        <item>230400</item>
        <item>460800</item>
        <item>921600</item>
    </string-array>
</resources>