<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/permissions">

        <SwitchPreferenceCompat
            app:key="camera"
            app:title="@string/camera" />

        <SwitchPreferenceCompat
            app:key="storage"
            app:title="@string/storage" />

        <SwitchPreferenceCompat
            app:key="location"
            app:title="@string/location" />

        <SwitchPreferenceCompat
            app:key="mic"
            app:title="@string/microphone" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/video_streaming">

        <ListPreference
            app:defaultValue="RTSP"
            app:entries="@array/stream_server"
            app:entryValues="@array/stream_server"
            app:key="video_server"
            app:title="@string/stream_mode"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/connection_type_category">

        <ListPreference
            app:defaultValue="USB"
            app:entries="@array/connection_type"
            app:entryValues="@array/connection_type"
            app:key="connection_type"
            app:title="@string/connectivity_mode"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/language">

        <Preference
            app:key="app_language"
            app:title="@string/language"
            app:summary="@string/language_summary" />

    </PreferenceCategory>

</PreferenceScreen>
